--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.52.0",
+    "react-hook-form": "^7.53.0",
     "react-i18next": "^10.0.0",
     "react-loading": "^2.0.3",
     "react-modal": "^3.16.1",
@@ -60,6 +60,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "react-window": "^1.8.10",
     "rxjs": "^7.8.1",
     "socket.io-client": "^4.7.4",
